
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.0.9 Beta 1 - 2009-10-09
---------------------------------
* CHG: On Windows 7 SuRun does not support and Display "Start as Administrator"
    on the control panel and the recycle bin. Also SuRun does not display 
    "(Re)start as Administrator" in Explorer's system menu
* FIX: HideAppStartCursor() caused InstallSuRun on Win7 with Aero to terminate

SuRun 1.2.0.8 - 2009-09-23
--------------------------
* renamed SuRun 1.2.0.8 Beta 1 to SuRun 1.2.0.8

SuRun 1.2.0.8 Beta 1 - 2009-09-22
---------------------------------
* CHG: The tray symbol shows Processes with unknown Windows Text with their 
    file name
* FIX: Starting with SuRun 1.2.0.7, after a SuRunner started one application as 
    Administrator and the system was not shut down properly (E.g. in cause of a
    power loss), the user's password was messed up. Now SuRun flushes the 
    registry to disk after restoring the user password hash and restores the 
    password hash on power loss.

SuRun 1.2.0.7 - 2009-09-10 (changes to SuRun 1.2.0.6):
--------------------------------
* NEW: Added preliminary Spanish resources
* NEW: Added check for "*UPGRADE*" in file names that need admin rights
* NEW: SuRun supports user bitmaps in Vista and Windows 7 (HKLM\SAM\SAM\
    Domains\Account\Users\<ID>,UserTile)
* NEW: Implemented Fast User Swithing via command line parameters 
    "SuRun /SwitchTo <[domain\]user|Session>".
* CHG: "SuRun /SYSMENUHOOK" will always keep running to be able to close all 
    processes created by SuRun when receiving WM_ENDSESSION